--- a/server/libraries/td-objects/Cargo.toml
+++ b/server/libraries/td-objects/Cargo.toml
@@ -55,6 +55,7 @@ td-database = { workspace = true }
 td-error = { workspace = true }
 td-security = { workspace = true }
 td-storage = { workspace = true }
+td-test = { workspace = true }
 td-tower = { workspace = true }
 td-transaction = { workspace = true }
 
