--- a/server/libraries/td-common/Cargo.toml
+++ b/server/libraries/td-common/Cargo.toml
@@ -55,6 +55,7 @@ td-security = { workspace = true }
 ## Macros
 
 td-apiforge = { workspace = true }
+td-concrete = { workspace = true }
 
 # External dependencies
 
