--- a/macros/facets/tm-test/Cargo.toml
+++ b/macros/facets/tm-test/Cargo.toml
@@ -36,6 +36,7 @@ td-shared = { workspace = true }
 # External dependencies
 
 darling = { workspace = true }
+proc-macro2 = { workspace = true }
 quote = { workspace = true }
 syn = { workspace = true, features = ["full"] }
 
