--- a/.custom/bump.cfg
+++ b/.custom/bump.cfg
@@ -1,3 +1,7 @@
+requirements-connector-salesforce.txt
+requirements-dev-first-party.txt_
+requirements-first-party.txt_
 assets/manifest/VERSION
 client/td-sdk/tabsdata/assets/manifest/RELEASE-NOTES
+connectors/python/tabsdata_salesforce/tabsdata_salesforce/VERSION
 variant/assets/manifest/RELEASE-NOTES
