--- a/make/fragments/scripts/environment.toml
+++ b/make/fragments/scripts/environment.toml
@@ -55,7 +55,17 @@ env_scripts = [
     #!@duckscript
     !include_files ./make/libraries/log.ds
 
+    os_name = get_env OS
+    is_windows = contains ${os_name} "Windows"
+    if ${is_windows}
+        separator = set ";"
+    else
+        separator = set ":"
+    end
+
     root_folder = get_env ROOT_PROJECT_FOLDER
+    root_tabsdata_folder = set ${root_folder}
+    root_tabsdata_salesforce_folder = set ${root_folder}/connectors/python/tabsdata_salesforce
 
     if not is_empty ${td-target}
         set_env td-target ${td-target}
@@ -125,14 +135,8 @@ env_scripts = [
     debug "✅ RUSTFLAGS environment variable is: '${rustflags}'"
 
     old_path = get_env PATH
-    os_name = get_env OS
-    is_windows = contains ${os_name} "Windows"
-    if ${is_windows}
-        separator = set ";"
-    else
-        separator = set ":"
-    end
-    new_path = concat ${root_folder}/target/${build-folder} ${separator} ${root_folder}/target/pytest/build ${separator} ${old_path}
+    new_path = concat ${root_tabsdata_salesforce_folder}/target/${build-folder} ${separator} ${root_tabsdata_salesforce_folder}/target/pytest/build ${separator} ${old_path}
+    new_path = concat ${root_tabsdata_folder}/target/${build-folder} ${separator} ${root_tabsdata_folder}/target/pytest/build ${separator} ${old_path}
     set_env PATH ${new_path}
     set_path = get_env PATH
     debug "✅ System PATH: ${set_path}"
