--- a/requirements.txt
+++ b/requirements.txt
@@ -2,29 +2,5 @@
 # Copyright 2024 Tabs Data Inc.
 #
 
-accessify==0.3.1
-base32hex==1.0.2
-click==8.1.8
-cloudpickle==3.1.1
-connectorx==0.4.2
-filelock==3.17.0
-hvac==2.3.0
-humanize==4.12.1
-importlib_metadata==8.6.1
-numpy==2.2.3
-packaging==24.2
-pandas==2.2.3
-pillow==11.1.0
-polars==1.23.0
-PyYAML==6.0.2
-pyarrow==19.0.1
-pyiceberg==0.8.1
-pywin32==308; platform_system == "Windows"
-requests==2.32.3
-rich==13.9.4
-rich-click==1.8.6
-sqlalchemy==2.0.38
-tabsdata_salesforce==0.9.3
-typing_extensions==4.12.2
-uuid-v7==1.0.0
-uv==0.6.3
+-r requirements-first-party.txt_
+-r requirements-third-party.txt_
