--- a/make/settings/make.env
+++ b/make/settings/make.env
@@ -3,4 +3,8 @@
 #
 
 TD_BUILD_ALL=false
+
+REQUIRE_SERVER_BINARIES=false
+REQUIRE_THIRD_PARTY=false
+TD_IGNORE_CONNECTOR_REQUIREMENTS=true
 TD_SKIP_NON_EXISTING_ASSETS=true
