--- a/make/settings/make.env
+++ b/make/settings/make.env
@@ -8,3 +8,4 @@ REQUIRE_SERVER_BINARIES=false
 REQUIRE_THIRD_PARTY=false
 TD_IGNORE_CONNECTOR_REQUIREMENTS=true
 TD_SKIP_NON_EXISTING_ASSETS=true
+PYTHON_IGNORE_UNAVAILABLE_PUBLIC_PACKAGES=true
