--- a/.custom/bump.cfg
+++ b/.custom/bump.cfg
@@ -1,3 +1,6 @@
+connectors/python/tabsdata_salesforce/tabsdata_salesforce/assets/manifest/RELEASE-NOTES
+connectors/python/tabsdata_salesforce/tabsdata_salesforce/assets/manifest/THIRD-PARTY
+connectors/python/tabsdata_salesforce/tabsdata_salesforce/assets/manifest/VERSION
 requirements-connector-salesforce.txt
 requirements-dev-first-party.txt_
 requirements-first-party.txt_
